--- a/class-15/exam-playground/public/index.html
+++ b/class-15/exam-playground/public/index.html
@@ -9,9 +9,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <h1>Exams are Fun!</h1>
-    <p>Test out your html/css and client side javascript</p>
+<body class="parent">
+    <h1 class="children">Exams are Fun!</h1>
+    <p class="children">Test out your html/css and client side javascript</p>
+    <ul id="menu">
+        <li id="link-1"><a href="/">Homepage</a></li>
+        <li id="link-2"><a href="/projects">Projects</a></li>
+        <li id="link-3"><a href="/blog">Blog</a></li>
+        <li id="link-4"><a href="/about">About</a></li>
+      </ul>
+      <img id="my_img" src="text_image.jpg" /> 
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.2/handlebars.min.js"></script>
